--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1 style="text-align:center;">Danny Trinh</h1>
         <div style="text-align: center;">
-            <h4 style="display:inline-block; text-align:center;"><a href="./About Me.html">About Me</a></h4>
+            <h4 style="display:inline-block; text-align:center;"><a href="./Public/About Me.html">About Me</a></h4>
             <h4 style="display:inline-block; text-align:center;"><a href="mailto:dannytrinh95@gmail.com">Contact Me</a></h4>
         </div>
 
